Add new notes for modern-js data-types

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,38 @@
     "type": "split",
     "children": [
       {
-        "id": "411b6a7d265014b7",
-        "type": "leaf",
-        "active": true,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "JavaScript/210207 Strings.md",
-            "mode": "preview"
+        "id": "a8819ec94b2f6923",
+        "type": "split",
+        "children": [
+          {
+            "id": "411b6a7d265014b7",
+            "type": "leaf",
+            "dimension": 60.47717842323651,
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "JavaScript/210207 Arrays.md",
+                "mode": "source"
+              }
+            },
+            "group": "bb6dbd6259ff52bd"
+          },
+          {
+            "id": "33590dedf08a0846",
+            "type": "leaf",
+            "dimension": 39.522821576763484,
+            "active": true,
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "JavaScript/210207 Arrays.md",
+                "mode": "preview"
+              }
+            },
+            "group": "bb6dbd6259ff52bd"
           }
-        }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -40,7 +62,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "#string",
+                "query": "tag:#modern-js",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +75,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 412.0121879577637,
+    "width": 355.0121879577637,
     "collapsed": true
   },
   "right": {
@@ -71,7 +93,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript/210207 Strings.md",
+                "file": "JavaScript/210207 Arrays.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,19 +132,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 380.45318603515625,
+    "width": 317.854248046875,
     "collapsed": true
   },
   "lastOpenFiles": [
+    "JavaScript/210207 Arrays.md",
+    "JavaScript/210206 Arrays.md",
+    "210207.md",
+    "210209.md",
+    "210208.md",
+    "JavaScript/210206 Strings.md",
+    "JavaScript/210206　Arrays.md",
     "JavaScript/210207 Strings.md",
     "JavaScript/210104 JavaScript fundamentals pt.1.md",
-    "JavaScript/210201 Methods of primitives.md",
-    "JavaScript/210128 Symbol type.md",
-    "JavaScript/210131 Object to primitive coversion.md",
-    "JavaScript/210203 Numbers.md",
-    "210207.md",
-    "Data Structure/201023 Singly Linked List in Stack.md",
-    "Data Structure/201020 LinkedList Basic.md",
-    "Algorithm/201017 Find all divisors of a natural number.md"
+    "JavaScript/210201 Methods of primitives.md"
   ]
 }
