--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,36 @@
     "type": "split",
     "children": [
       {
-        "id": "642882acb760a3c0",
-        "type": "leaf",
-        "active": true,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
-            "mode": "source"
+        "id": "f4bc7daf534e9ac3",
+        "type": "split",
+        "children": [
+          {
+            "id": "642882acb760a3c0",
+            "type": "leaf",
+            "active": true,
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "Competitive Programming/Leetcode/English/206 - Reverse Linked List.md",
+                "mode": "source"
+              }
+            },
+            "group": "3cdfeff0ea2891f9"
+          },
+          {
+            "id": "d907247db9738236",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "Competitive Programming/Leetcode/English/206 - Reverse Linked List.md",
+                "mode": "preview"
+              }
+            },
+            "group": "3cdfeff0ea2891f9"
           }
-        }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -53,7 +73,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 302.0121879577637
+    "width": 385.5121879577637
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +90,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
+                "file": "Competitive Programming/Leetcode/English/206 - Reverse Linked List.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,18 +129,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 443.2669372558594
+    "width": 443.2669372558594,
+    "collapsed": true
   },
   "lastOpenFiles": [
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/210209 민족주의.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/명문장/210209 공허한 말만 있다면 어찌 일을 이룰 수 있겠습니까.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/명문장/210130 대한민국 임시 헌장.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/명문장/Untitled.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/210129 성리학.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/Untitled.md",
-    "ReadingNote/짧고 굵게 일합니다.md",
-    "ReadingNote/Books.md",
-    "계정/ryuj0415@gmail.com.md"
+    "Competitive Programming/Leetcode/English/206 - Reverse Linked List.md",
+    "Competitive Programming/Leetcode/Korean/141 - Linked List Cycle.md",
+    "Competitive Programming/Leetcode/Japanese/141 - Linked List Cycle.md",
+    "Competitive Programming/Leetcode/English/141 - Linked List Cycle.md",
+    "Competitive Programming/Leetcode/English/1672 - Richest Customer Wealth.md",
+    "Competitive Programming/Leetcode/Korean/1672 - Richest Customer Wealth.md",
+    "Competitive Programming/Leetcode/Korean/1662 - Check If Two String Arrays are Equivalent.md",
+    "Competitive Programming/Leetcode/Korean/1614 - Maximum Nesting Depth of the Parentheses.md",
+    "Competitive Programming/Leetcode/Korean/1603 - Design Parking System.md",
+    "Competitive Programming/Leetcode/Korean/1528 - Shuffle String.md"
   ]
 }
