Add new ruby doc related to methods

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210211 병자호란.md",
+            "file": "Ruby/Basic Ruby/210211 Writing methods.md",
             "mode": "preview"
           }
         }
@@ -71,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210211 병자호란.md",
+                "file": "Ruby/Basic Ruby/210211 Writing methods.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -114,15 +114,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "Ruby/Basic Ruby/210211 Writing methods.md",
+    "Ruby/Basic Ruby/210206 Data types pt.3.md",
+    "Ruby/Basic Ruby/Untitled.md",
+    "ReadingNote/Books.md",
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
+    "ReadingNote/짧고 굵게 일합니다.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210211 병자호란.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210131 임진왜란.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210125 위화도회군.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/Untitled.md",
-    "JavaScript/210208 Array methods pt.1.md",
-    "JavaScript/210210 Array methods pt.2.md",
-    "Untitled.md",
-    "계정/eu.j.jii@gmail.com.md",
-    "계정/jiiyoo1994@gmail.com.md",
-    "계정/Untitled.md"
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/Untitled.md"
   ]
 }
