--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,8 +10,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "React/Basics/210131 create-react-app & JSX.md",
-            "mode": "source"
+            "file": "React/Basics/210213 State and Lifecycle.md",
+            "mode": "preview"
           }
         }
       }
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 385.5121879577637
+    "width": 385.5121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "React/Basics/210131 create-react-app & JSX.md",
+                "file": "React/Basics/210213 State and Lifecycle.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,18 +110,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 415.4532470703125
+    "width": 415.4532470703125,
+    "collapsed": true
   },
   "lastOpenFiles": [
-    "React/Basics/210131 create-react-app & JSX.md",
-    "React/Basics/210201 Rendering Elements.md",
+    "React/Basics/210213 State and Lifecycle.md",
     "React/Basics/210211 Components and Props.md",
-    "Competitive Programming/Leetcode/English/237 - Delete Node in a Linked List.md",
-    "React/Basics/210201 Components and Props.md",
-    "Ruby/Basic Ruby/210211 Writing methods.md",
-    "Ruby/Basic Ruby/210206 Data types pt.3.md",
-    "Ruby/Basic Ruby/Untitled.md",
-    "ReadingNote/Books.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md"
+    "210213.md",
+    "JavaScript/210210 Array methods pt.2.md",
+    "JavaScript/201212 Copy to Clipboard.md",
+    "Data Structure/Array/201031 배열(array)이란.md",
+    "JavaScript/201012 Capture the right click.md",
+    "Competitive Programming/Leetcode/English/1295 - Find Numbers with Even Number of Digits.md",
+    "JavaScript/201117 Divide Integer by 10.md",
+    "Competitive Programming/Leetcode/Korean/1662 - Check If Two String Arrays are Equivalent.md"
   ]
 }
