--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "e7dda35a037fb17d",
+        "id": "44c5dc33328778bf",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Ruby/Basic Ruby/210204 Data types pt.1.md",
+            "file": "Ruby/Basic Ruby/210205 Data types pt.2.md",
             "mode": "preview"
           }
         }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#data-type",
+                "query": "tag:#easy",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -49,11 +49,13 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
-    "width": 385.5121879577637
+    "width": 385.5121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +72,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ruby/Basic Ruby/210204 Data types pt.1.md",
+                "file": "Ruby/Basic Ruby/210205 Data types pt.2.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +114,15 @@
     "width": 415.4532470703125
   },
   "lastOpenFiles": [
+    "Ruby/Basic Ruby/210205 Data types pt.2.md",
+    "Data Structure/Linked List/3. Circular Linked List/200718 원형 연결 리스트(Circular Linked List)란.md",
+    "JavaScript/210125 Method and 'this'.md",
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210127 청화백자.md",
     "Ruby/Basic Ruby/210204 Data types pt.1.md",
     "Software Development/Agile programming and TDD + BDD.md",
     "Data Structure/Linked List/3. Circular Linked List/200718 循環リスト(Circular Linked List)とは.md",
     "Competitive Programming/Leetcode/English/1290 - Convert Binary Number in a Linked List to Integer.md",
     "Competitive Programming/Leetcode/English/1313 - Decompress Run-Length Encoded List.md",
-    "계정/eu.j.jii@gmail.com.md",
-    "Unix/200406 Delete all except.md",
-    "Unix/200430 'mv' command shortcuts.md",
-    "Unix/200118 Crontab Basics.md",
-    "Ruby/Basic Ruby/210211 Writing methods.md"
+    "계정/eu.j.jii@gmail.com.md"
   ]
 }
